WebKit::nsTextAlignmentFromTextAlignment() falls through ASSERT_NOT_REACHED() https://bugs.webkit.org/show_bug.cgi?id=234989 <rdar://problem/87273264>

Reviewed by Darin Adler.

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::nsTextAlignmentFromTextAlignment):



Canonical link: https://commits.webkit.org/246195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288241 268f45cc-cd09-0410-ab3c-d52691b4dbfc